# test-rust-service

./: Cargo.toml  README.md  best-practices.sh  build.sh  config.toml  install.sh  run.sh  test.sh
config/: action.toml  config-action.toml  config.toml  service.toml
scripts/: .test.sh.swp  best-practices.sh  build.sh  install.sh  run.sh  test.sh
scripts/functions/: find_config.sh  get_test_file_list.sh
src/: lib.rs  main.rs
src/action/: config.rs  config_action.rs  exec.rs  mod.rs
src/security/: limits.rs  mod.rs  uid.rs  validation.rs
src/service/: config.rs  config_service.rs  error.rs  logging.rs  mod.rs  monitoring.rs  run.rs
tests/: common.rs  integration.rs  integration_test_rust_service.rs  security_checks.rs  security_checks_test_rust_service.rs  test_validation.sh  unit_test_test_rust_service.rs  unit_tests.rs
tests/integration/: test_time_interval_looping.rs  time_output_test.rs
tests/integration/app/: config_discovery_test.rs  logging_integration_test.rs  service_lifecycle_test.rs
tests/integration/common/: monitoring_integration_test.rs  security_workflow_test.rs  shutdown_handling_test.rs  test_prerequisites.rs
tests/integration_test_rust_service/app/: mod.rs
tests/security_checks/app/: test_circular_dependency_prevention.rs  test_directory_traversal.rs  test_file_descriptor_leak.rs  test_file_descriptor_race_conditions.rs  test_input_sanitization.rs  test_insecure_directories.rs  test_integer_overflow_protection.rs  test_libc_error_handling.rs  test_service_user_validation.rs  test_toctou_prevention.rs  test_unsafe_libc_hardening.rs
tests/security_checks/common/: test_code_separation.rs  test_dependency_audit.rs  test_dependency_validation.rs
tests/security_checks_test_rust_service/app/: mod.rs
tests/unit_test_test_rust_service/app/: mod.rs
tests/unit_tests/: time_action_test.rs
tests/unit_tests/app/: config_tests.rs  monitoring_tests.rs  monitoring_unit_tests.rs  time_action_tests.rs
tests/unit_tests/common/: best_practices_test.rs  test_script_validation.rs  toml_lint_test.rs  variable_naming_test.rs
