[package]
name = "test-rust-service"
version = "0.1.0"
edition = "2021"

[lints.rust]
non_snake_case = "allow"

[dependencies]
rust-service = { path = "../rust-service" }
chrono = "0.4"
log = "0.4"
nix = { version = "0.30.1", features = ["fs"] }
libc = "0.2.176"
thiserror = "2.0.16"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
ctrlc = "3.5.0"

[dev-dependencies]
regex = "1.0"
