[package]
name = "test-rust-service"
version = "0.1.0"
edition = "2024"

[package.metadata]
install_dir = "/opt/test-rust-service"
rust_service_path = "../rust-service"

[[bin]]
name = "test-rust-service"
path = "src/main.rs"

[lints.rust]
non_snake_case = "allow"

[dependencies]
rust-service = { path = "../rust-service" }
chrono = "0.4"
log = { version = "0.4.28", features = ["std"] }
serde = { version = "1.0.226", features = ["derive"] }
toml = "0.9.7"
ctrlc = "3.5.0"
libc = "0.2.176"

[dev-dependencies]
regex = "1.0"
walkdir = "2.4"
thiserror = "1.0"
rust-common-tests = { path = "../rust-common-tests" }

[[test]]
name = "integration_test_rust_service"
path = "tests/integration_test_rust_service.rs"

[[test]]
name = "security_checks_test_rust_service"
path = "tests/security_checks_test_rust_service.rs"

[[test]]
name = "unit_test_test_rust_service"
path = "tests/unit_test_test_rust_service.rs"

[[test]]
name = "integration_rust_common_tests"
path = "../rust-common-tests/tests/integration_rust_common_tests.rs"

[[test]]
name = "security_checks_rust_common_tests"
path = "../rust-common-tests/tests/security_checks_rust_common_tests.rs"

[[test]]
name = "unit_tests_rust_common_tests"
path = "../rust-common-tests/tests/unit_tests_rust_common_tests.rs"
